--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,1 @@
-<input type="text" [(ngModel)]="simpleInput" placeholder="Enter your name"> <br> <br>
-<test [simpleInput]="simpleInput"> </test>
+<app-post-container> </app-post-container>
